tried to solve the overlap of navbar and content

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,5 +1,3 @@
-body { padding-top: 70px; }
-
 .form {
     max-width: 640px;
     margin: 0 auto;
@@ -12,3 +10,5 @@ body { padding-top: 70px; }
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+body { padding-top: 70px: }
